--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-flask
-gunicorn
+# 1. 변경된 모든 파일을 스테이징 영역에 추가
+git add .
+
+# 2. 어떤 작업을 했는지 기록 (따옴표 안에 내용 수정 가능)
+git commit -m "운동 페이지 로직 수정 및 이효재 모드 안정화"
+
+# 3. 서버(GitHub 등)로 업로드
+git push origin main
